# qql-studio

./: .gitignore  README.md
qql-studio/: package-lock.json  package.json
qql-studio/src-tauri/: Cargo.toml  tauri.conf.json
qql-studio/src-tauri/icons/: icon.icns
qql-studio/src-tauri/src/: commands.rs  lib.rs  main.rs  render.rs  seed.rs
qql-studio/src/lib/: Detail.svelte  Tile.svelte  api.ts  renderQueue.ts
qql-studio/src/routes/: +page.svelte
qqlrs-main/: Cargo.toml
qqlrs-main/examples/: decode.rs  point_count_search.rs
qqlrs-main/src/: art.rs  layouts.rs
