[package]
name = "qql-studio"
version = "0.1.0"
description = "QQL Studio — trait-filtered seed explorer"
authors = ["you"]
edition = "2021"

[lib]
name = "qql_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
qql = { path = "../../qqlrs-main" }
raqote = "0.8"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
rand = "0.8"
once_cell = "1"
anyhow = "1"
rayon = "1.10"

[dev-dependencies]
hex-literal = "0.4"

# Compile all dependencies (including the qql renderer) with full optimisation
# even in dev builds. Our own crate stays at opt-level 0 for fast incremental
# compiles, but the heavy CPU work happens inside qql which becomes ~5–10×
# faster as a result.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = false
lto = true
codegen-units = 1

